Blender Crash when selecting "Point select mode" in Particle Mode with and 0 hairs object #33530

Closed
opened 2012-12-14 09:22:49 +01:00 by Daniel Camino · 5 comments

%%%I create an object with Hair particle system on it and with a number of hairs = 0.
Then I enter into "Particle Mode" and when I change Edit mode to "Point edit mode" (see the attached image), Blender crash.
This does not happen when I select "Tip edit mode" or when my object has a number of hairs >= 1.

This is the console error I receive:

1071 Segmentation fault: 11 /Applications/[3D]/Blender/blender-2.65\ Official/blender.app/Contents/MacOS/blender
logout

I found this issue in Blender's official revisions r52859 (2.65) and r51026 (2.64) OSX 64bit Builds.

I have attached a .blend file so you can try the bug. You must only click on "Point edit mode" (see the attached image as reference) and the program will crash.

I'm working on an 2.66 GHz Quad-Core Intel Xeon with NVIDIA GeForce GT 120.
OSX Lion 10.7.5

Thanks and Regards. Daniel.
%%%

%%%I create an object with Hair particle system on it and with a number of hairs = 0. Then I enter into "Particle Mode" and when I change Edit mode to "Point edit mode" (see the attached image), Blender crash. This does not happen when I select "Tip edit mode" or when my object has a number of hairs >= 1. This is the console error I receive: 1071 Segmentation fault: 11 /Applications/[3D]/Blender/blender-2.65\ Official/blender.app/Contents/MacOS/blender logout I found this issue in Blender's official revisions r52859 (2.65) and r51026 (2.64) OSX 64bit Builds. I have attached a .blend file so you can try the bug. You must only click on "Point edit mode" (see the attached image as reference) and the program will crash. I'm working on an 2.66 GHz Quad-Core Intel Xeon with NVIDIA GeForce GT 120. OSX Lion 10.7.5 Thanks and Regards. Daniel. %%%
Author

Changed status to: 'Open'

Changed status to: 'Open'

%%%Fixed in svn rev5299, thanks for the report, closing.%%%

%%%Fixed in svn rev5299, thanks for the report, closing.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Author

%%%Hi, it's there this version for Mac? seems that the last Mac version is r52863...

http://builder.blender.org/download/

Thanks and regards. D.%%%

%%%Hi, it's there this version for Mac? seems that the last Mac version is r52863... http://builder.blender.org/download/ Thanks and regards. D.%%%
Author

%%%Sorry, I found it on http://www.graphicall.org/

I'll try it.

Thanks again.%%%

%%%Sorry, I found it on http://www.graphicall.org/ I'll try it. Thanks again.%%%
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#33530
No description provided.