Fix #33530: Blender Crash when selecting "Point select mode" in Particle Mode with and 0 hairs object